# kalign

./: .containerignore  .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  Containerfile  Containerfile.downstream  Containerfile.memcheck  Makefile.am  PRD_sparse_consistency.md  README  README-python.md  README.md  VERSION  autogen.sh  build.zig  configure.ac  pyproject.toml  pytest.ini  setup_server.sh  test_thresholds.py  version.sh
.claude/commands/: release.md
.github/workflows/: benchmark.yml  ccpp.yml  cmake.yml  codeql-analysis.yml  python.yml  wheels.yml
benchmarks/: PRD_ensemble_optimizer.md  PRD_kalign_align_full.md  PRD_unified_optimizer.md  __init__.py  __main__.py  adaptive_matrix_test.py  adaptive_matrix_test2.py  alignment_diagnostics.py  analysis.py  app.py  bench_modes.py  bench_quality_timing.py  combined_improvements.py  consistency_experiment.py  consistency_experiment2.py  consistency_sweep.py  datasets.py  diversity_analysis.py  eval_checkpoint_configs.py  external_balibase.py  full_comparison.py  gap_analysis.py  gap_penalty_sweep.py  gap_sweep.py  gap_sweep2.py  joint_sweep.py  make_summary_figure.py  matrix_sweep.py  mumsa_plots.py  mumsa_precision.py  nruns_sweep.py  optimize_ensemble.py  optimize_parallel.py  optimize_params.py  optimize_unified.py  overgap_analysis.py  pfasum_auto_sweep.py  poar_correlation.py  probmsa_experiment.py  progressive_only_test.py  (+17 more)
benchmarks/downstream/: __init__.py  __main__.py  alignment_accuracy.py  calibration.py  figures.py  hmmer_detection.py  phylo_accuracy.py  positive_selection.py  provenance.py  simulation.py  utils.py
dev/: Makefile.am  run_aln_test.sh  run_io_test.sh
dev/bench/: data.js
dev/data/: BB11001_EOF.msf  README  README~  afa.good.3
doc/paper/: kalign3.bib  kalign3.org
docs/: MLM_Augmented_Alignment_PRD.md  PRD-benchmark-repo-update.md  PRD-downstream-benchmarks.md  PRD-gap-weighting.md  PRD-msa-consistency.md  PRD-uncertainty-aware-alignment.md  PRD_ProbMSA.md  parameter-cleanup-integration.md
lib/: CMakeLists.txt
lib/include/kalign/: kalign.h  kalign_config.h
lib/src/: aln_apair_dist.c  aln_apair_dist.h  aln_controller.c  aln_controller.h  aln_mem.c  aln_mem.h  aln_param.c  aln_param.h  aln_profileprofile.c  aln_profileprofile.h  aln_refine.c  aln_refine.h  aln_run.c  aln_run.h  aln_seqprofile.c  aln_seqprofile.h  aln_seqseq.c  aln_seqseq.h  aln_setup.c  aln_setup.h  aln_struct.h  aln_wrap.c  aln_wrap.h  alphabet.c  alphabet.h  anchor_consistency.c  anchor_consistency.h  bisectingKmeans.c  bisectingKmeans.h  bpm.c  bpm.h  bpm_test.c  consensus_msa.c  consensus_msa.h  core.h  coretralign.c  coretralign.h  ensemble.c  ensemble.h  esl_stopwatch.c  (+56 more)
lib/src/threadpool/: CMakeLists.txt  bench_threadpool.c  stress_threadpool.c  test_threadpool.c  threadpool.c  threadpool.h
m4/: ax_set_compile_flags.m4
old_src/: .dir-locals.el  lib_test.cpp  libkalign.h  run_kalign.c  version.h.in
old_src/alignment/: aln_mem.h  aln_param.c  aln_profileprofile.c  aln_run.c  aln_run.h  aln_setup.h
old_src/interface/: CMakeLists.txt  mod_interface.c  mod_interface.h  parameters.h
old_src/msa/: CMakeLists.txt  (+1 more)
python/: README.md  pyproject.toml
python-docs/: python-api.md  python-performance.md  python-quickstart.md  python-troubleshooting.md
python-examples/: README.md  basic_usage.py  ecosystem_integration.py  performance_benchmarks.py
python-kalign/: __init__.py  _core.cpp  cli.py  io.py  utils.py
scripts/: balibase_test.org  benchmark.org  bralibase.org  plan.org
src/: CMakeLists.txt  Makefile.am  align_io.c  align_io.h  alignment.c  alignment.h  alignment_parameters.c  alignment_parameters.h  aln_controller.c  aln_controller.h  aln_data.c  aln_data.h  aln_mem.c  aln_mem.h  aln_profileprofile.c  aln_profileprofile.h  aln_run.c  aln_run.h  aln_seqprofile.c  aln_seqprofile.h  aln_seqseq.c  aln_seqseq.h  aln_setup.c  aln_setup.h  aln_struct.h  aln_task.c  aln_task.h  alphabet.c  alphabet.h  benchrunner.c  bisectingKmeans.c  bisectingKmeans.h  bpm.c  bpm.h  counts_from_random_trees.c  counts_from_random_trees.h  create_run_cmds.c  create_run_kalign_diff_cmds.c  esl_stopwatch.h  estimate_aln_param.c  (+48 more)
src/alignment/: CMakeLists.txt  aln_controller.h  aln_run.c  aln_run.h  aln_seqprofile.c  aln_seqprofile.h  aln_seqseq.c  aln_seqseq.h  aln_setup.c  aln_setup.h  mod_aln.c  mod_aln.h  weave_alignment.c  weave_alignment.h
src/alphabet/: CMakeLists.txt  alphabet.c  alphabet.h
src/interface/: global.h  parameters.c  parameters.h
src/msa/: CMakeLists.txt  msa.h
src/msa_io/: CMakeLists.txt  io.h  misc.c  misc.h  msa.h  rwalign.c
src/msa_io/test_data/: a2m.good.1  clustal.good.1  clustal.good.2
src/tasks/: task.c  task.h
src/test_data/: BB30014.msf
src/tldevel/: CMakeLists.txt  esl_stopwatch.c  esl_stopwatch.h  mod_tldevel.c  tldevel.c  tldevel.h  tlmisc.c  tlmisc.h  tlrng.c
src/tools/: CMakeLists.txt  benchrunner.c  create_run_cmds.c  create_run_kalign_diff_cmds.c  queue.c  queue.h  time_and_score_aln.c
src/tree/: CMakeLists.txt  bisectingKmeans.c  bisectingKmeans.h  bpm.c  bpm.h  euclidean_dist.c  euclidean_dist.h  kmeans.h  mod_tree.c  mod_tree.h  pick_anchor.h  sequence_distance.c  sequence_distance.h
tests/: CMakeLists.txt  dssim.c  dssim.h  dssim_test.c  kalign_api_test.c  kalign_cmp_test.c  kalign_ensemble_test.c  kalign_io_test.c  kalign_lib_test.c  kalign_lib_testCXX.cpp  large_benchmark.c  memcheck_stress.c  memcheck_stress.py  run_memcheck.sh  zig_test.c
tests/data/: BB11001.msf  BB12006.tfa  README  small.fa  tiny.fa  tiny_internal.fa
tests/python/: conftest.py  test_basic_alignment.py  test_cli.py  test_compare.py  test_downstream_foundation.py  test_downstream_integration.py  test_ecosystem_integration.py  test_ecosystem_real.py  test_edge_cases.py  test_error_handling.py  test_file_operations.py  test_input_validation.py  test_integration.py  test_modes.py  test_parameters.py  test_performance.py  test_sequence_types.py  test_thresholds.py
tests/python/test_data/: rna_sequences.fasta
(+41 files in other folders)
