[build-system]
requires = [
    "scikit-build-core>=0.11.4",
    "pybind11>=2.12",
    "cmake>=3.18",
]
build-backend = "scikit_build_core.build"

[project]
name = "kalign"
version = "3.4.5"
description = "Python wrapper for the Kalign multiple sequence alignment engine"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Timo Lassmann", email = "timo.lassmann@telethonkids.org.au"}
]
maintainers = [
    {name = "Timo Lassmann", email = "timo.lassmann@telethonkids.org.au"}
]
keywords = [
    "bioinformatics",
    "sequence alignment",
    "multiple sequence alignment",
    "MSA",
    "computational biology",
    "genomics",
    "proteomics"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.85",
    "matplotlib>=3.9.4",
    "numpy>=1.19.0",
    "pandas>=2.3.0",
    "rich>=14.0.0",
    "scikit-bio>=0.6.3",
]

[project.scripts]
kalign = "kalign.cli:main"

[project.optional-dependencies]
# Bioinformatics ecosystem integrations
biopython = ["biopython>=1.85"]
skbio = ["scikit-bio>=0.6.3"]
io = ["biopython>=1.85"]  # For I/O helper functions
all = ["biopython>=1.85", "scikit-bio>=0.6.3"]

# Development dependencies
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-xdist",
    "rich",
    "black",
    "flake8",
    "mypy",
    "build",
    "twine",
    "biopython>=1.85",  # For testing ecosystem features
    "scikit-bio>=0.6.3"
]
test = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-xdist",
    "rich"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser"
]

[project.urls]
Homepage = "https://github.com/TimoLassmann/kalign"
Documentation = "https://github.com/TimoLassmann/kalign/blob/main/README.md"
Repository = "https://github.com/TimoLassmann/kalign"
"Bug Tracker" = "https://github.com/TimoLassmann/kalign/issues"
Changelog = "https://github.com/TimoLassmann/kalign/blob/main/ChangeLog"

[tool.scikit-build]
# Wheel settings - removed py-api to build version-specific wheels
# wheel.py-api = "cp39"

# CMake settings
cmake.build-type = "Release"
cmake.source-dir = "."  # CMakeLists.txt is now in the same directory as pyproject.toml
cmake.args = [
    "-DBUILD_PYTHON_MODULE=ON",
    "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"
]
build.targets = ["_core"]

# Install settings
install.components = ["python"]

# Source distribution settings
# Now that all files are in the same directory tree, sdist should work correctly
sdist.exclude = [
    "build*/",
    ".venv/",
    "__pycache__/",
    "**/*.pyc",
    "wheelhouse/",
    "dist/"
]

# Explicitly include critical directories that might be excluded by default
sdist.include = [
    "lib/include/"
]

# Logging
logging.level = "DEBUG"

[tool.scikit-build.cmake.define]
BUILD_PYTHON_MODULE = "ON"

[tool.cibuildwheel]
# Build wheels for Python 3.9+
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"

# Skip 32-bit builds (PyPy wheels are not built by default)
skip = "*-win32 *-manylinux_i686"

# Test command
test-command = "python -c 'import kalign; print(kalign.__version__)'"

# Linux settings
[tool.cibuildwheel.linux]
before-all = [
    "yum install -y cmake3 || apt-get update && apt-get install -y cmake",
]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# macOS settings
[tool.cibuildwheel.macos]
before-all = [
    "brew install cmake || echo 'cmake already installed'",
]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

# Windows settings
[tool.cibuildwheel.windows]
before-all = [
    "choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' || echo 'cmake already installed'",
]

# Test settings for all platforms
[tool.cibuildwheel.environment]
# Set OpenMP variables for better performance
OMP_NUM_THREADS = "1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=kalign",
    "--cov-report=term-missing",
    "--cov-report=html"
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "kalign._core"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
]
